tests/cases/syntax/error/names/string-as-name.soccam
;; string-as-name.soccam
;; Tests: Names should not be strings.
(module string-as-name soccam
  (decl (["x" int])
    (:= x 1)))
